Update LaneView.java